# rz-vrf

./: Cargo.toml  README.md
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
rz-ecvrf/: Cargo.toml
rz-ecvrf/src/: helper.rs  lib.rs
