[workspace]
resolver = "2"
members = ["rz-ecvrf", "host", "methods"]

[workspace.dependencies]
rz-ecvrf = { path = "rz-ecvrf" }
methods = { path = "methods" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
